--- a/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
+++ b/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
@@ -950,6 +950,251 @@
 
             <!--#endregion :::: FIN GRID PRINCIPAL ::::  -->
         </dxi-item>
+        <dxi-item title="Jul 2023">
+            <!--#region :::: GRID PRINCIPAL::::  -->
+
+            <dx-data-grid #Abr id="gridContainer3" [dataSource]="arrIngresosJulio" [height]="500" [showBorders]="true" [columnAutoWidth]="true" (onRowPrepared)="onRowPrepared($event)">
+
+                <dxo-export [enabled]="true"></dxo-export>
+                <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
+                <!-- unidadNegocio -->
+                <dxi-column dataField="unidadNegocio" [groupIndex]="0"></dxi-column>
+                <!-- tipoOperacion -->
+                <dxi-column dataField="tipoOperacion" caption="Operación"></dxi-column>
+
+                <!-- febMASolicitudCancelacion -->
+                <dxi-column caption="MOVIMIENTOS DE VIAJES DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
+
+                    <!-- CancelacionProvision -->
+                    <dxi-column dataField="cancelacionProvision" caption="Prov. Cancelada" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+
+                    <!-- ProvisionFacturada -->
+                    <dxi-column dataField="facturadoProvision" caption="Prov. Facturada" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+
+                    <!-- Refacturado -->
+                    <dxi-column dataField="refacturado" caption="Refacturado" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+
+
+                    <!-- febMADisminucion -->
+                    <dxi-column dataField="maSolicitudCancelacion" caption="Cancelado" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+
+                    <!-- febMADisminucion -->
+                    <dxi-column dataField="maCancelacionOtros" caption="Canc. Otros Ingresos" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+
+
+                    <!-- febMANuevo -->
+                    <dxi-column dataField="maTotal" caption="Total" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+
+                </dxi-column>
+
+                <!-- febIngreso -->
+                <dxi-column caption="FLETE DEL MES" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
+                    <dxi-column dataField="facturado" caption="Facturado" alignment="right" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+
+                    <!-- febProvision -->
+                    <dxi-column dataField="provision" caption="Provisión" alignment="right" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+                    <!-- febProvision -->
+                    <dxi-column dataField="diferencias2022" caption="Diferencias2022" alignment="right" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+                    <!-- despachado -->
+                    <dxi-column dataField="totalFlete" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+                </dxi-column>
+
+                <dxi-column caption="RESUMEN" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
+                    <dxi-column dataField="otrosIngresos" caption="Otros ingresos" alignment="right" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+                    <dxi-column dataField="totalMes" caption="Total Mes" alignment="right" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+                    <dxi-column dataField="total" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
+
+                </dxi-column>
+                <!-- febProvision -->
+                <dxi-column dataField="facturasDirectas" caption="Facturas directas" alignment="right" headerCellTemplate="headerTemplate">
+                    <dxo-format type="currency" [precision]="2"> </dxo-format>
+                </dxi-column>
+
+                <dxo-summary>
+                    <dxi-group-item column="cancelacionProvision" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="cancelacionProvision" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+                    <dxi-group-item column="facturadoProvision" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="facturadoProvision" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+                    <dxi-group-item column="refacturado" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="refacturado" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+                    <dxi-group-item column="maSolicitudCancelacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="maSolicitudCancelacion" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+                    <dxi-group-item column="maCancelacionOtros" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="maCancelacionOtros" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+                    <dxi-group-item column="maTotal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="maTotal" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+                    <dxi-group-item column="facturado" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="facturado" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+                    <dxi-group-item column="provision" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="provision" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+                    <dxi-group-item column="totalFlete" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="totalFlete" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+                    <dxi-group-item column="otrosIngresos" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="otrosIngresos" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+                    <dxi-group-item column="totalMes" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="totalMes" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+                    <dxi-group-item column="diferencias2022" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="diferencias2022" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+
+
+
+                    <dxi-group-item column="total" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="total" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+
+                    <dxi-group-item column="facturasDirectas" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="facturasDirectas" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+
+
+                </dxo-summary>
+
+                <div *dxTemplate="let data of 'headerTemplate'">
+                    <div style="font-weight:bolder; color: black">
+                        {{ data.column.caption }}
+                    </div>
+                </div>
+
+                <div *dxTemplate="let info of 'titleHeaderTemplate'">
+                    <div style="font-weight: bolder; color: #ff5722">
+                        {{ info.column.caption }}
+                    </div>
+                </div>
+
+                <!-- TEMPLATE: CELDA EN NEGRITA -->
+                <div *dxTemplate="let cell of 'cellTemplateBold'">
+                    <div style="font-weight: bolder; font-size:medium;">{{ cell.text }}</div>
+                </div>
+
+
+                <dxo-paging [pageSize]="60"></dxo-paging>
+
+                <dxo-sorting mode="none"></dxo-sorting>
+
+            </dx-data-grid>
+            <!--#endregion :::: FIN GRID PRINCIPAL ::::  -->
+
+            <br>
+            <h3>Detalle</h3>
+            <!--#region :::: GRID PRINCIPAL::::  -->
+            <dx-data-grid #AbrDetalle id="gridContainer4" [dataSource]="arrDetalleJulio" [height]="500" [showBorders]="true" [columnAutoWidth]="true">
+                <dxo-export [enabled]="true"></dxo-export>
+                <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
+                <!-- unidadNegocio -->
+                <dxi-column dataField="area" [groupIndex]="0"></dxi-column>
+                <!-- clasificacion -->
+                <dxi-column dataField="clasificacion" [groupIndex]="0"></dxi-column>
+                <!-- tipoOperacion -->
+                <dxi-column dataField="noViaje" caption="No. Viaje"></dxi-column>
+                <dxi-column dataField="fechaDespacho" caption="Despachado"></dxi-column>
+                <!-- enero -->
+                <dxi-column dataField="numGuia" caption="Num. Guía"></dxi-column>
+                <!-- febMASolicitudCancelacion -->
+                <dxi-column dataField="tipoOperacion" caption="Tipo Operación"></dxi-column>
+                <!-- febMASolicitudCancelacion -->
+                <dxi-column dataField="status" caption="St."></dxi-column>
+                <!-- febMASolicitudCancelacion -->
+                <dxi-column dataField="prestamo" caption="Préstamo"></dxi-column>
+
+                <dxi-column dataField="flete" caption="Flete" headerCellTemplate="headerTemplate">
+                    <dxo-format type="currency" [precision]="2"> </dxo-format>
+                </dxi-column>
+                <!-- febMACancelacion -->
+                <dxi-column dataField="fleteAnt" caption="Flete Ant." headerCellTemplate="headerTemplate">
+                    <dxo-format type="currency" [precision]="2"> </dxo-format>
+                </dxi-column>
+                <!-- febMAAumento -->
+                <dxi-column dataField="diferencia" caption="Diferencia" headerCellTemplate="headerTemplate">
+                    <dxo-format type="currency" [precision]="2"> </dxo-format>
+                </dxi-column>
+
+                <dxi-column dataField="factura" caption="Factura"></dxi-column>
+                <dxi-column dataField="facturaAnt" caption="Factura Ant."></dxi-column>
+                <dxi-column dataField="fechaIngreso" caption="Ingreso CP"></dxi-column>
+                <dxi-column dataField="fechaModifico" caption="Modificó CP"></dxi-column>
+
+
+
+
+
+                <div *dxTemplate="let data of 'headerTemplate'">
+                    <div style="font-weight: bolder; color: black">
+                        {{ data.column.caption }}
+                    </div>
+                </div>
+
+                <div *dxTemplate="let info of 'titleHeaderTemplate'">
+                    <div style="font-weight: bolder; color: #ff5722">
+                        {{ info.column.caption }}
+                    </div>
+                </div>
+
+                <!-- TEMPLATE: CELDA EN NEGRITA -->
+                <div *dxTemplate="let cell of 'cellTemplateBold'">
+                    <div style="font-weight: bold">{{ cell.text }}</div>
+                </div>
+
+
+                <dxo-paging [pageSize]="20"></dxo-paging>
+
+                <dxo-sorting mode="none"></dxo-sorting>
+
+            </dx-data-grid>
+
+            <!--#endregion :::: FIN GRID PRINCIPAL ::::  -->
+        </dxi-item>
     </dx-tab-panel>
 
 
